--- a/CrmPackage/WebResources/Cascading Stylesheet (CSS)/arup_OppoWiz.css
+++ b/CrmPackage/WebResources/Cascading Stylesheet (CSS)/arup_OppoWiz.css
@@ -368,3 +368,12 @@ textarea.form-control {
     display: inline-block;
     width: 48%;
 }
+
+.has-error input {
+    border-width: 3px;
+    background-color: rgba(255,182,193,128);
+}
+
+.fetching-data input {
+    background-color: gray;
+}
