--- a/CrmPackage/WebResources/Cascading Stylesheet (CSS)/arup_OppoWiz.css
+++ b/CrmPackage/WebResources/Cascading Stylesheet (CSS)/arup_OppoWiz.css
@@ -374,6 +374,63 @@ textarea.form-control {
     background-color: rgba(255,182,193,128);
 }
 
-.fetching-data input {
-    background-color: gray;
+.waiting-for-crm {
+    background-image: url("arup_progressSpinner.gif");
+    background-repeat: no-repeat;
+    /*background-color: lightgrey;*/
+    /*opacity: 0.8;*/
+}
+
+/*.loader {
+    position: absolute;
+    width: 50px;    
+    height: 50px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}*/
+
+.progress {
+    /*position: relative;
+    top: +10px;
+    left: -60px;
+    z-index: -100;*/
+}
+
+.circular {
+    animation: rotate 2s linear infinite;
+    height: 100px;
+    position: relative;
+    width: 100px;
+}
+
+.path {
+    stroke-dasharray: 1,200;
+    stroke-dashoffset: 0;
+    stroke: #20648f;
+    animation: dash 1.5s ease-in-out infinite, color 6s ease-in-out infinite;
+    stroke-linecap: round;
+}
+
+@keyframes rotate {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes dash {
+    0% {
+        stroke-dasharray: 1,200;
+        stroke-dashoffset: 0;
+    }
+
+    50% {
+        stroke-dasharray: 89,200;
+        stroke-dashoffset: -35;
+    }
+
+    100% {
+        stroke-dasharray: 89,200;
+        stroke-dashoffset: -124;
+    }
 }
