--- a/CrmPackage/WebResources/Cascading Stylesheet (CSS)/arup_OppoWiz.css
+++ b/CrmPackage/WebResources/Cascading Stylesheet (CSS)/arup_OppoWiz.css
@@ -379,6 +379,6 @@ textarea.form-control {
     background-repeat: no-repeat;
 }
 
-.collapsed {
-    visibility: collapse;
+.hidden {
+    display: none;
 }
