--- a/CrmPackage/WebResources/Cascading Stylesheet (CSS)/arup_OppoWiz.css
+++ b/CrmPackage/WebResources/Cascading Stylesheet (CSS)/arup_OppoWiz.css
@@ -353,7 +353,6 @@ textarea.form-control {
 }
 
 #SS, #UR, #CN, #arupDescriptionText{
-    max-width: 700px;
     margin-left: 0px;
 }
 
@@ -393,4 +392,8 @@ textarea.form-control {
 
 .am-6 {
     margin: 6px;
+}
+
+.arup_mb40{
+    margin-bottom: 40px;
 }
