Opportunity Wizard release 2

--- a/CrmPackage/WebResources/Cascading Stylesheet (CSS)/arup_OppoWiz.css
+++ b/CrmPackage/WebResources/Cascading Stylesheet (CSS)/arup_OppoWiz.css
@@ -398,3 +398,8 @@ textarea.form-control {
 .arup_mb40{
     margin-bottom: 40px;
 }
+
+.arup_inset45 {
+    margin-left: 60px;
+    margin-right: 45px;
+}
